--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -26,12 +26,15 @@
                 class="form-control mr-3"
                 style="flex: 1"
               />
-              <button style="border-radius: 20px" class="btn btn-primary">
-                Yangi Harid Qushish
+              <button style="border-radius: 20px" class="btn btn-primary ms-4">
+                Yangi Reja Qo'shish
               </button>
             </div>
           </form>
         </div>
+        <button style="border-radius: 20px" class="btn btn-danger mt-4">
+          Hamma Rejalarni O'chirish
+        </button>
       </div>
 </body>
 </html>
