--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -20,7 +20,7 @@
             <div class="d-flex align-items-center">
               <input
                 id="create-field"
-                name="item"
+                name="reja"
                 autofocus
                 type="text"
                 class="form-control mr-3"
@@ -32,6 +32,29 @@
             </div>
           </form>
         </div>
+        <ul id="item-list" class="list-group pb-5">
+          <% items.map(function(item){ %>
+          <li
+            class="list-group-item list-group-item-info d-flex align-items-center justify-content-between"
+          >
+            <span class="item-text"><%=item.reja%> </span>
+            <div>
+              <button
+                data-id="<%=item._id%>"
+                class="edit-me btn btn-secondary btn-sm mr-1"
+              >
+                Edit
+              </button>
+              <button
+                data-id="<%=item._id%>"
+                class="edit-me btn btn-danger btn-sm"
+              >
+                Delete
+              </button>
+            </div>
+          </li>
+          <% })%>
+        </ul>
         <button style="border-radius: 20px" class="btn btn-danger mt-4">
           Hamma Rejalarni O'chirish
         </button>
