BRR: add front side and delete operation

--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -47,7 +47,7 @@
               </button>
               <button
                 data-id="<%=item._id%>"
-                class="edit-me btn btn-danger btn-sm"
+                class="delete-me btn btn-danger btn-sm"
               >
                 Delete
               </button>
@@ -60,4 +60,6 @@
         </button>
       </div>
 </body>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="/browser.js"></script>
 </html>
