BRR: Reja loyihamizni yakuniy qismi

--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -55,7 +55,7 @@
           </li>
           <% })%>
         </ul>
-        <button style="border-radius: 20px" class="btn btn-danger mt-4">
+        <button id="clean-all" style="border-radius: 20px" class="btn btn-danger mt-4">
           Hamma Rejalarni O'chirish
         </button>
       </div>
